--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
             margin-left: auto;
             margin-right: auto;
             background-color: #e6e4d9;
-            background-image: url('images/pattern.png');
+            background-image: url('./images/pattern.png');
         }
 
         #mainheader {
@@ -87,7 +87,7 @@
     <header id="mainheader">
         <nav>
             <ul>
-                <li><img src="images/cake.svg" height="55" /></li>
+                <li><img src="./images/cake.svg" height="55" /></li>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="pieoverview.html">All pies</a></li>
                 <li><a href="about.html">About</a></li>
@@ -96,7 +96,7 @@
     </header>
     <div style="width:1000px;margin-left: auto;margin-right: auto;">
         <aside id="leftmenu">
-            <a href="index.html"><img src="images/bethanylogo.png" /></a>
+            <a href="index.html"><img src="./images/bethanylogo.png" /></a>
 
             <header>
                 <h4 style="text-align: center;">Browse our pies</h4>
