--- a/fruitpies.html
+++ b/fruitpies.html
@@ -3,13 +3,13 @@
 
 <head>
   <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-JC1D4QBRQD"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-M5DCM179BB"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-JC1D4QBRQD');
+  gtag('config', 'G-M5DCM179BB');
 </script>
 
     <meta charset="utf-8">
