--- a/seasonalpies.html
+++ b/seasonalpies.html
@@ -2,14 +2,14 @@
 <html>
 
 <head>
-   <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-JC1D4QBRQD"></script>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-M5DCM179BB"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-JC1D4QBRQD');
+  gtag('config', 'G-M5DCM179BB');
 </script>
 
     <meta charset="utf-8">
